# Capstone_text_digest

./: .env.example  .gitignore  README.md  cheatsheet.md  implementation.md  pyproject.toml  reference.md  requirements.txt
assets/: How to plant banana tree in a pot.txt  cinderella.txt  sample_input.txt
docs/: flowchart.md
src/: app.py  content_filter.py  groq_client.py  input_handler.py  output_writer.py  tts_engine.py
tests/: test_content_filter.py  test_groq_client.py  test_input_handler.py
